--- a/.github/workflows/vercel.json
+++ b/.github/workflows/vercel.json
@@ -8,11 +8,23 @@
   ],
   "routes": [
     {
-      "src": "/api/(.*)",
-      "dest": "/api/$1"
+      "src": "/api/generate-all",
+      "dest": "/api/generate-all.js"
     },
     {
-      "src": "/(.*)",
+      "src": "/api/generate",
+      "dest": "/api/generate.js"
+    },
+    {
+      "src": "/api/webhook",
+      "dest": "/api/webhook.js"
+    },
+    {
+      "src": "/api",
+      "dest": "/api/index.js"
+    },
+    {
+      "src": "/",
       "dest": "/api/index.js"
     }
   ]
